<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Graph">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/CountryList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/recyclerBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/graph"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CountryList" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButtonConfirmed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/confirmed" />

        <RadioButton
            android:id="@+id/radioButtonDeaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/deaths" />

        <RadioButton
            android:id="@+id/radioButtonRecovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recovered" />
    </RadioGroup>

    <ImageView
        android:id="@+id/rightArrow"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/World"
        app:layout_constraintBottom_toBottomOf="@+id/CountryList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/CountryList"
        app:srcCompat="@drawable/arrow_right" />

    <ImageView
        android:id="@+id/leftArrow"
        android:layout_width="40dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/World"
        app:layout_constraintBottom_toBottomOf="@+id/CountryList"
        app:layout_constraintStart_toStartOf="@+id/CountryList"
        app:layout_constraintTop_toTopOf="@+id/CountryList"
        app:srcCompat="@drawable/arrow_left" />


</androidx.constraintlayout.widget.ConstraintLayout>